--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,9 @@ const today = new Date();
 ---
 
 <footer>
-	Default Template by <a href ="https://astro.build/">astro</a>
+	Handcrafted by Adrian Radores
+	<br>
+	 <a href ="https://astro.build/">credits to astro</a>
 
 	<div class="social-links">
 		<a href="https://github.com/mobi35" target="_blank">
