--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,17 +56,12 @@ import { FaCss3Alt } from "react-icons/fa";
 
 			<h3>Projects</h3>
 
-			<div class="flex">
-
-				<div> 
-					card
-				</div>
-
-				<div> 
-					card
-				</div>
-
-
+			<div class="flex-column">
+				<a href="https://lifeofpoker.com">Life of poker</a>
+				<a href="https://filipinoart.ph">FilipinoArt</a>
+				<a href="https://ithec.nl">Ithec</a>
+				<a href="https://companypass.nl">Companypass</a>
+				<a href="https://brabantbrain.nl">Brain</a>
 			</div>
 		
 	
