--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,8 +7,8 @@ import { SITE_TITLE } from '../consts';
 	<nav>
 		<div class="internal-links">
 			<HeaderLink href="/">Home</HeaderLink>
-			<HeaderLink href="/blog">Blog</HeaderLink>
-			<HeaderLink href="/about">About</HeaderLink>
+			<!-- <HeaderLink href="/blog">Blog</HeaderLink> -->
+			<!-- <HeaderLink href="/about">About</HeaderLink> -->
 		</div>
 		<div class="social-links">
 			<a href="https://github.com/mobi35" target="_blank">
