--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -54,6 +54,7 @@ import { FaCss3Alt } from "react-icons/fa";
 				I am currently employed as a Junior Web Developer for a company here in Ortigas District Pasig - one of the Philippines' prime business district.
 			</p>
 
+			<div class="wrapper"> 
 			<h3>Projects</h3>
 
 			<div class="flex-column">
@@ -63,7 +64,16 @@ import { FaCss3Alt } from "react-icons/fa";
 				<a href="https://companypass.nl">Companypass</a>
 				<a href="https://brabantbrain.nl">Brain</a>
 			</div>
-		
+			</div>
+
+
+			<div class="wrapper"> 
+			<h3>Education</h3>
+				<div class="flex-column">
+					<h5 >University of Caloocan City - (2012 - 2017)</h5>
+					<p class="no-margin">Bachelor of Science In Computer Science</p>
+			</div>
+			</div>
 	
 		</main>
 		<Footer />
