--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -51,9 +51,11 @@ const socialCount = SOCIALS.filter(social => social.active).length;
 
       <p>
         I have been working as a web developer since February 2017, and I love
-        exploring new technologies and tools to speed up my workflow. I enjoy
+        exploring new technologies and tools to speed up my workflow.
+
+        <!-- I enjoy
         designing and building systems from scratch, but I'm also engaged in
-        upgrading a legacy system to the latest.
+        upgrading a legacy system to the latest. -->
       </p>
 
       <!-- <p>
