add grammar fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -80,7 +80,7 @@ const techCount = TECHS.filter(tech => tech.active).length;
         // only display if at least one social link is enabled
         techCount > 0 && (
           <div class="tech-wrapper">
-            <div class="social-links">Languages I know: </div>
+            <div class="social-links">Languages I use: </div>
             <Techs />
           </div>
         )
