--- a/style.css
+++ b/style.css
@@ -101,6 +101,14 @@ nav ul {
 
 }
 
+.flex-row {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5em;
+
+}
+
+
 ul li {
   list-style-type: none;
 }
@@ -180,20 +188,20 @@ table {
 }
 
 h1 {
-  font-size: 3em;
+  font-size: 2.6em;
   font-family: 'Outfit', sans-serif !important;
 }
 
 h2 {
-	font-size: 2em;
-}
-
-h3 {
 	font-size: 1.5em;
 }
 
+h3 {
+	font-size: 1.3em;
+}
+
 p {
-	font-size: 1.2em;
+	font-size: 1em;
 }
 
 h2, h3, h4, h5, h6 {
@@ -223,38 +231,59 @@ h2, h3, h4, h5, h6 {
 
 
 .container {
-  margin: 50px auto;
+  margin: 30px auto;
 
   width: 100%;
 	z-index: 1;
 	position: relative;
   display: inline-grid;
-  row-gap: 1rem;
+  row-gap: 0.7rem;
 }
 
 .card {
 }
 
 
+.socials {
+  margin-top: 15px;
+  display: flex;
+  width: 100%;
+	justify-content: flex-end;
+}
+
+  svg {
+  transition: transform 0.3s ease; 
+}
+
+  svg:hover {
+  transform: rotate(15deg) scale(1.2); 
+}
+
+.icon-with-text {
+  display: flex;
+  gap: 5px;
+}
 
 .main-wrapper {
   max-width: 768px;
   width: 100%;
-  margin: 50px auto;
+  margin: 25px auto;
 	z-index: 1;
 	position: relative;
 }
 
 
-.description-list {
-  opacity: 0.7;
-}
-
 .container-grid-title {
   color: #F0F0F0;
   font-weight: 500;
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
+
+.description-list {
+  opacity: 0.7;
+  font-size: 1rem;
+}
+
 
 /* .description { */
 /*   color: #fff!important; */
@@ -265,14 +294,25 @@ h2, h3, h4, h5, h6 {
 .container-grid {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
-
 }
+
 
 .greeting {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
 	gap: 1rem;
+}
+
+.greeting .right-side {
+  display: flex;
+  align-items: end;
+  flex-direction: column;
+
+
+
+
+
 }
 
 .avatar {
@@ -289,12 +329,12 @@ h2, h3, h4, h5, h6 {
   position: relative;
   margin-left: 30px;
   border-left: 1px solid #ccc;
+  padding: 25px 0;
 }
 
 .timeline-item {
   position: relative;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin: 10px 0;
   padding-left: 20px;
 }
 
@@ -315,19 +355,39 @@ h2, h3, h4, h5, h6 {
 
 .timeline-content .languages {
 
-	font-size: 0.9rem;
   display:flex;
   justify-content: right;
   opacity: 0.7;
 }
 
-.timeline-content h3 {
-  font-size: 18px;
-  font-weight: bold;
+@media (max-width: 768px) {
+
+	.container-grid {
+		grid-template-columns: 1fr;
+	}
+
+	.main-wrapper {
+		padding: 0 13px;
+	}
+
+h1 {
+  font-size: 2em;
+  font-family: 'Outfit', sans-serif !important;
 }
 
-.timeline-content p {
-
+	h2 {
+	font-size: 1.5em;
 }
 
+h3 {
+	font-size: 1.3em;
+}
+	
+}
 
+.divider {
+	margin-top: 7px ;
+	width: 100%;
+	height: 1px;
+	background-color: #ccc;
+}
