--- a/style.css
+++ b/style.css
@@ -1,30 +1,12 @@
 
-@font-face {
-  font-family: 'Outfit';
-  src: url('/fonts/outfit/outfit-latin-100-normal.ttf') format('truetype');
-  font-weight: 100;
-  font-style: normal;
-}
 
-@font-face {
-  font-family: 'Outfit';
-  src: url('/fonts/outfit/outfit-latin-200-normal.ttf') format('truetype');
-  font-weight: 200;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Outfit';
-  src: url('/fonts/outfit/outfit-latin-300-normal.ttf') format('truetype');
-  font-weight: 300;
-  font-style: normal;
-}
 
 @font-face {
   font-family: 'Outfit';
   src: url('/fonts/outfit/outfit-latin-400-normal.ttf') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -32,6 +14,7 @@
   src: url('/fonts/outfit/outfit-latin-500-normal.ttf') format('truetype');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -39,6 +22,7 @@
   src: url('/fonts/outfit/outfit-latin-600-normal.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -46,13 +30,7 @@
   src: url('/fonts/outfit/outfit-latin-700-normal.ttf') format('truetype');
   font-weight: 700;
   font-style: normal;
-}
-
-@font-face {
-  font-family: 'Outfit';
-  src: url('/fonts/outfit/outfit-latin-800-normal.ttf') format('truetype');
-  font-weight: 800;
-  font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -60,15 +38,16 @@
   src: url('/fonts/outfit/outfit-latin-900-normal.ttf') format('truetype');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
-
 
 @font-face {
   font-family: 'Satoshi';
   src: url('Satoshi-Variable.ttf') format('truetype');
-  font-weight: 100 900; 
+  font-weight: 100 400; 
   font-stretch: 75% 125%; 
-  font-style: normal; 
+  font-style: normal;
+  font-display: swap;
 }
 
 
@@ -260,6 +239,9 @@ h2, h3, h4, h5, h6 {
 }
 
 .icon-with-text {
+
+  font-weight: 300;
+  font-family: 'Satoshi', sans-serif;
   display: flex;
   gap: 5px;
 }
@@ -280,6 +262,7 @@ h2, h3, h4, h5, h6 {
 }
 
 .description-list {
+  font-family: 'Satoshi', sans-serif;
   opacity: 0.7;
   font-size: 1rem;
 }
